--- a/style.css
+++ b/style.css
@@ -9,3 +9,10 @@ h1 {
   font-style: italic;
   color: #373fff;
 }
+
+.goggles-bookmark {
+  border: 2px solid black;
+  background-color: yellow;
+  border-radius: 5px;
+  padding: 5px;
+}
