🍡🌿 Checkpoint ./webxray.css:217543/152 ./webxray.js:217543/8

--- a/webxray.css
+++ b/webxray.css
@@ -1,3 +1,10 @@
+/* Comment out publish */
+
+.glyph-P {
+  /*display: none !important;*/
+}
+
+
 /* Cascading Style Sheet (CSS) for Web X-Ray Goggles */
 
 body.webxray-padded {
