--- a/public/style.css
+++ b/public/style.css
@@ -11,8 +11,44 @@ h1 {
 }
 
 .goggles-bookmark {
-  border: 2px solid black;
-  background-color: yellow;
+  display: block;
+  cursor: pointer;
+  background: #f073ab;
+  padding: 10px 0 8px 0;
+  border: 0;
   border-radius: 5px;
-  padding: 5px;
+  box-shadow: 0 2px 0 #e04164;
+  font-size: 18px;
+  font-family: "Fira Sans";
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  width: calc(17px) rem;
+  padding: 20px 0 14px 3rem;
+  border-radius: 30px;
+  font-weight: 400;
+  line-height: 1.4rem;
+  width: 22rem;
+  position: relative;
+}
+
+.goggles-bookmark:hover {
+  background: #ff7eb8;
+}
+
+.goggles-bookmark span.label {
+  position: relative;
+  color: transparent;
+}
+
+.goggles-bookmark span.label:after {
+  content: "Drag and drop me in your bookmark bar";
+  position: absolute;
+  top: calc(50% - .75rem);
+  left: -7.3rem;
+  color: white;
+  white-space: nowrap;
+}
+
+.fa-arrows:before {
 }
