--- a/public/style.css
+++ b/public/style.css
@@ -66,8 +66,8 @@ ol, ul, li {
 }
 
 #steps > li {
-  margin: .5em 1em;
-  padding: 1em 0 1em 5em;
+  margin: 1em;
+  padding: 0 0 1em 5em;
   background-color: #f2f3ff;
   border-radius: 3px;
 }
