🌋🌄 Checkpoint ./public/index.html:217543/1858 ./public/style.css:217543/8

--- a/public/style.css
+++ b/public/style.css
@@ -67,7 +67,7 @@ ol, ul, li {
 
 #steps > li {
   margin: 1em;
-  padding: 0 0 1em 5em;
+  padding: 0 1em 1em 5em;
   background-color: #FDEFEA;
   border-radius: 3px;
 }
